<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/new_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#ffffffff"
            android:hint="@string/new_user_name"
            android:paddingLeft="20dp"
            android:textColor="#ff000000"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#11000000" />

        <EditText
            android:id="@+id/new_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#ffffffff"
            android:hint="@string/new_user_password"
            android:paddingLeft="20dp"
            android:textColor="#ff000000"
            android:textSize="14sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#11000000" />

        <EditText
            android:id="@+id/ensure_new_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#ffffffff"
            android:hint="@string/ensure_password"
            android:paddingLeft="20dp"
            android:textColor="#ff000000"
            android:textSize="14sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/StORTeregister"
            android:textSize="14sp" />
        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:layout_width="320dp"
            android:layout_height="wrap_content" >
            <RadioButton
                android:id="@+id/radio_stu"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/student" />
            <RadioButton
                android:id="@+id/radio_tea"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/teacher" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/register"
            android:background="@color/theme"
            android:textColor="#ffffffff"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <TextView
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:id="@+id/back_login"
            android:text="@string/back_login"
            android:textStyle="bold"/>

    </LinearLayout>


</LinearLayout>
